ARGO CD AND KUBERNETES/tradeflow-k8s/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tradeflow-production
  labels:
    name: tradeflow-production
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: tradeflow-infrastructure
  labels:
    name: tradeflow-infrastructure
    environment: production
